Apply review feedback: fix imports, idempotency test, README best-effort note, add @Invoker multi-source tests
Agent-Logs-Url: https://github.com/projectrawit/rawit/sessions/d88851b4-0ade-4522-a342-f70fa34ddcd9

Co-authored-by: ronnygunawan <3048897+ronnygunawan@users.noreply.github.com>